--- a/css/login.css
+++ b/css/login.css
@@ -41,15 +41,16 @@ body {
 	gap: 1em;
 	flex-direction: column;
 	align-items: center;
+}
 
-	span {
+.logo-area	span {
 		font-size: 1.5em;
 	}
 
-	img {
+.logo-area	img {
 		width: 50%;
 	}
-}
+
 
 .login-area {
 	display: flex;
