--- a/css/login.css
+++ b/css/login.css
@@ -54,7 +54,7 @@ body {
 .login-area {
 	display: flex;
 	flex-direction: column;
-	gap: 15px;
+	gap: 10px;
 	padding: 10px;
 }
 
@@ -111,8 +111,12 @@ input:valid + .placeholder {
 	border-radius: 10px;
 	flex: 1;
 	color: white;
-	background-color: hsl(203, 100%, 50%);
+	background-color: hsl(203, 100%, 70%);
 	border: 1px solid black;
+}
+
+.loginbutton button:hover{
+	background-color: hsl(203, 100%, 59%);
 }
 
 .signup-area {
@@ -121,7 +125,11 @@ input:valid + .placeholder {
 }
 
 .signup-area a {
-	color: violet;
+	color: rgb(247, 106, 247);
+}
+
+.signup-area a:hover{
+	color:hsl(300, 81%, 56%);
 }
 
 @media (max-width: 500px) {
