--- a/css/signup.css
+++ b/css/signup.css
@@ -15,7 +15,8 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	height: 100dvh;
+	transition: .3s;
 }
 
 .container {
