--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand");
 @import url("/your-path-to-uicons/css/uicons-rounded-bold.css");
 
+:root {
+	--primary: #a453af;
+	--secondary: #dfc9e1;
+	--accent: #dba0e3;
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -17,9 +23,18 @@ body {
 .sidebar-links {
 	display: flex;
 	flex-direction: column;
-	background-color: rgb(196, 180, 255);
+	background-color: var(--secondary);
 	height: 100%;
 	justify-content: center;
+}
+
+.logo {
+	align-self: center;
+	width: 7em;
+	margin: 10px auto 20px;
+	border: 1px solid var(--primary);
+	background-color: var(--accent);
+	border-radius: 30px;
 }
 
 .sidebar-item a {
@@ -30,14 +45,16 @@ body {
 	display: flex;
 	gap: 2em;
 	font-size: 0.9em;
+	border: 1px solid #ffffff00;
 }
 
 .sidebar-item a:hover {
-	background-color: rgb(120, 82, 255);
+	background-color: var(--accent);
+	border: 1px solid var(--primary);
 	color: white;
 }
 
-.sidebar-links .sidebar-item:nth-child(5),
+.sidebar-links .sidebar-item:nth-child(6),
 .sidebar-links .sidebar-item:nth-child(1) {
 	margin-top: auto;
 }
@@ -54,7 +71,7 @@ body {
 	padding: 10px;
 	display: flex;
 	justify-content: flex-end;
-	background-color: rgb(133, 255, 255);
+	background-color: var(--accent);
 	gap: 1em;
 	font-size: 0.8em;
 }
@@ -73,10 +90,14 @@ body {
 }
 
 .searchbar input {
-	padding: 6px 60px 6px 40px;
+	padding: 6px 40px;
 	border-radius: 20px;
 	border: 1px solid grey;
 	height: 100%;
+}
+
+.searchbar input:focus {
+	border: 1px solid var(--primary);
 }
 
 .searchbar img {
