--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -59,12 +59,10 @@ body {
 	margin-top: auto;
 }
 
-.sidebar-item a:nth-child(1) {
-	order: 1;
-}
-
 .main {
 	flex: 1;
+	display: flex;
+	flex-direction: column;
 }
 
 .header {
@@ -104,4 +102,36 @@ body {
 	position: absolute;
 	top: 5px;
 	left: 10px;
+}
+
+.dashboard-content {
+	background-color: #fdedff;
+	flex: 1;
+	padding: 1em;
+	display: flex;
+	flex-direction: column;
+}
+
+.card-section {
+	display: flex;
+	gap: 1em;
+}
+
+.card {
+	flex: 1;
+	width: 15em;
+	height: 10em;
+	padding: 10px;
+	background-color: #dfc9e1;
+	border-radius: 10px;
+	border: 1px solid var(--primary);
+}
+
+.test {
+	padding: 10px;
+	background-color: #dfc9e1;
+	margin-top: 10px;
+	border-radius: 10px;
+	flex: 1;
+	border: 1px solid var(--primary);
 }
