--- a/css/signup.css
+++ b/css/signup.css
@@ -16,7 +16,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100dvh;
-	transition: .3s;
+	transition: 0.3s;
 }
 
 .container {
@@ -48,10 +48,10 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 0.5em;
-	
 }
 
-.signup-form input {
+input,
+select {
 	border: 1px solid grey;
 	padding: 6px 10px;
 	border-radius: 5px;
@@ -79,6 +79,16 @@ input:valid + .placeholder {
 	flex: 1;
 	display: flex;
 	position: relative;
+	align-items: center;
+}
+
+.inputbox:nth-child(6) {
+	margin: 1em 0;
+}
+
+.inputbox span {
+	padding-right: 2em;
+	color: grey;
 }
 
 .inputbox label {
@@ -96,10 +106,10 @@ input:valid + .placeholder {
 	margin-top: 1em;
 	padding: 6px 12px;
 	border-radius: 5px;
-	border: 1px solid black;;
+	border: 1px solid black;
 }
 
-.signup-form button:hover{
+.signup-form button:hover {
 	background-color: hsl(303, 54%, 64%);
 }
 
@@ -149,8 +159,8 @@ input:valid + .placeholder {
 	color: hsl(271, 58%, 63%);
 }
 
-.alreadyaccount a:hover{
-	color:rgb(116, 0, 224)
+.alreadyaccount a:hover {
+	color: rgb(116, 0, 224);
 }
 
 .image-section {
