--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -54,8 +54,8 @@ body {
 	color: white;
 }
 
-.sidebar-links .sidebar-item:nth-child(6),
-.sidebar-links .sidebar-item:nth-child(1) {
+.sidebar-item:nth-of-type(1),
+.sidebar-item:nth-of-type(6) {
 	margin-top: auto;
 }
 
@@ -110,6 +110,10 @@ body {
 	padding: 1em;
 	display: flex;
 	flex-direction: column;
+}
+
+.title {
+	margin-bottom: 1em;
 }
 
 .card-section {
