--- a/css/login.css
+++ b/css/login.css
@@ -3,6 +3,7 @@
 :root {
 	--p: #2580d0;
 	--phover: #005dae;
+	--accent: #5950ff;
 }
 
 * {
@@ -15,9 +16,6 @@
 
 body {
 	background-color: hsl(210, 6%, 93%);
-}
-
-.login-body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -29,8 +27,7 @@ body {
 .login-container {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
-	margin: 0;
+	width: 450px;
 	background-color: #f7f3fa;
 	padding: 1em;
 	border-radius: 10px;
@@ -38,7 +35,9 @@ body {
 }
 
 .login-section {
-	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
 }
 
 .logo-area {
@@ -54,10 +53,13 @@ body {
 }
 
 .logo-area img {
-	width: 50%;
+	width: 7em;
+	border-radius: 10px;
+	padding: 10px;
+	border: 2px solid grey;
 }
 
-.login-area {
+.input-area {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -75,9 +77,8 @@ body {
 	font-size: 1.2rem;
 	padding: 10px;
 	border-radius: 5px;
-	border: none;
 	background-color: #f0eff5;
-	border: 1px solid grey;
+	border: 2px solid #d8d7db;
 }
 
 .placeholder {
@@ -93,6 +94,7 @@ body {
 input:focus,
 input:valid {
 	background-color: white;
+	border: 2px solid var(--accent);
 }
 
 input:focus + .placeholder,
@@ -101,7 +103,7 @@ input:valid + .placeholder {
 	transform: translateY(-17px);
 	font-size: 0.7rem;
 	padding: 0 10px;
-	background-color: black;
+	background-color: var(--accent);
 	color: white;
 }
 
@@ -109,7 +111,7 @@ input:valid + .placeholder {
 	display: flex;
 }
 
-.loginbutton button {
+button {
 	margin-top: 1em;
 	border: none;
 	font-size: 1em;
@@ -120,7 +122,7 @@ input:valid + .placeholder {
 	background-color: var(--p);
 }
 
-.loginbutton button:hover {
+button:hover {
 	background-color: #005dae;
 }
 
@@ -139,20 +141,14 @@ input:valid + .placeholder {
 
 @media (max-width: 500px) {
 	.login-container {
-		background-color: hsl(289, 23%, 85%);
-		border-radius: 0;
 		height: 100%;
 		box-shadow: none;
-		padding: 6px;
-		gap: 2em;
-		width: 100%;
-		justify-content: center;
+		border-radius: 0;
+		flex: 1;
 	}
 
 	.login-section {
 		flex: 1;
-		display: flex;
-		flex-direction: column;
 		justify-content: space-evenly;
 	}
 }
